# iris_plugin_osqp_MPC

./: CMakeLists.txt  CMakeLists_v0.txt  README.md  iris_osqp_mpc.world  package.xml
include/: interface_osqp_ros_mpc.h  matrices_mpc.h  osqp_configure.h  workspace.h  workspace_10_2_u3_vt1.h  workspace_old.h
include/osqp_vt1_10_2_u3/: matrices_osqp_mpc_10_2_u3_vt1.h  ws_10_2_u3_vt1.h
include/osqp_vt1_10_3_u3/: matrices_osqp_mpc_10_3_u3_vt1.h  ws_10_3_u3_vt1.h
include/osqp_vt1_15_2_u3/: matrices_osqp_mpc_15_2_u3_vt1.h  ws_15_2_u3_vt1.h
include/osqp_vt1_15_3_u3/: matrices_osqp_mpc_15_3_u3_vt1.h  ws_15_3_u3_vt1.h
include/osqp_vt1_20_2_u3/: matrices_osqp_mpc_20_2_u3_vt1.h  ws_20_2_u3_vt1.h
include/osqp_vt1_20_3_u3/: matrices_osqp_mpc_20_3_u3_vt1.h  ws_20_3_u3_vt1.h
launch/: iris_osqp.launch
robots/: iris_with_osqp.sdf
src/: interface_osqp_ros_mpc.cc  iris_plugin_osqp_mpc.cc
